spi,core,cli: introduce compile-time type checking system
Add a static type system and compile-time type checking pass for jq
expressions, supporting polymorphic type inference, equi-recursive types,
declarative type schemes for builtins and extension functions, and CLI
integration.

Type System SPI (jackson-jq-spi):
- Introduce net.thisptr.jackson.jq.v2.spi.type hierarchy: AnyType, NullType,
  BooleanType, NumericType, StringType, ArrayType, ObjectType, UnionType,
  FilterType, FunctionType, RecursiveType, NeverType, and UndefinedType.
- Add TypeScheme with quantified type variables for polymorphic signatures.
- Add TypeNotation parser and formatter for human-readable type expressions.
- Extend Function, JqFunction, and Expression contracts with type scheme
  and type introspection capabilities.

Compiler & Type Checking Engine (jackson-jq-core):
- Implement bidirectional polymorphic type inference and verification in
  TypeCheck, TypeRelations, TypeEquivalence, TypeSubstitution, and
  StructuralWidening.
- Support subtyping, union safety, pattern destructuring, branch narrowing
  on type guards, and error recovery for guarded expressions (? and try/catch).
- Run type analysis prior to constant folding and AST optimization.
- Add TypeCheckMode (OFF, WARN, STRICT) to CompileOptions, along with
  configurable input/output types (setInputType, setOutputType).
- Support typed variable and constant declarations in Environment.

Built-ins & Extension Modules:
- Provide explicit type schemes for all core jq built-in functions.
- Implement type schemes across all extension modules: binary, debug, fs,
  gzip, http, random, re2, time, uri, uuid, and zstd, as well as the Joni
  regex provider.

CLI & Interactive Playground (jackson-jq-cli):
- Add --type-check (off, warn, strict), --input-type, and --output-type CLI
  options with location-aware diagnostic reporting.
- In --interactive mode, add type configuration in the options dialog (Ctrl+O)
  with live syntax validation in