@@ -1,7 +1,6 @@
 package net.thisptr.jackson.jq.v2.ext.random;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import com.fasterxml.jackson.databind.JsonNode;
@@ -11,30 +10,14 @@ import net.thisptr.jackson.jq.v2.core.Environment;
 import net.thisptr.jackson.jq.v2.core.EnvironmentBuilder;
 import net.thisptr.jackson.jq.v2.core.JsonQuery;
 import net.thisptr.jackson.jq.v2.core.version.Versions;
-import net.thisptr.jackson.jq.v2.json.JsonProvider;
 import net.thisptr.jackson.jq.v2.json.impl.jackson2.Jackson2JsonProvider;
-import net.thisptr.jackson.jq.v2.spi.BindContext;
-import net.thisptr.jackson.jq.v2.spi.Expression;
+import net.thisptr.jackson.jq.v2.spi.ExpressionProperties;
 import net.thisptr.jackson.jq.v2.spi.FunctionSignature;
-import net.thisptr.jackson.jq.v2.spi.RuntimeContext;
 import net.thisptr.jackson.jq.v2.spi.exception.JsonQueryException;
-import net.thisptr.jackson.jq.v2.spi.version.Version;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 public class RandomModuleTest {
-	private static final BindContext<JsonNode> BIND_CONTEXT = new BindContext<>() {
-		@Override
-		public JsonProvider<JsonNode> getJsonProvider() {
-			return Jackson2JsonProvider.getInstance();
-		}
-
-		@Override
-		public Version getJqVersion() {
-			return Versions.JQ_1_6;
-		}
-	};
-
 	@Test
 	public void returnsAValueInTheExpectedRange() throws JsonQueryException {
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(Jackson2JsonProvider.getInstance(), Versions.JQ_1_6)
@@ -58,9 +41,9 @@ public class RandomModuleTest {
 	public void functionContract() {
 		ModuleImpl module = new ModuleImpl();
 		module.getFunctions().values().forEach(fn -> {
-			Expression<RuntimeContext, JsonNode> expr = fn.bind(BIND_CONTEXT, Collections.emptyList());
-			assertThat(expr.dependsOnInput()).isFalse();
-			assertThat(expr.dependsOnExternalState()).isTrue();
+			ExpressionProperties properties = fn.analyze(Versions.JQ_1_6, List.of());
+			assertThat(properties.dependsOnInput()).isFalse();
+			assertThat(properties.dependsOnExternalState()).isTrue();
 		});
 	}
 }
