@@ -1,7 +1,6 @@
 package net.thisptr.jackson.jq.v2.ext.time;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -12,51 +11,18 @@ import net.thisptr.jackson.jq.v2.core.Environment;
 import net.thisptr.jackson.jq.v2.core.EnvironmentBuilder;
 import net.thisptr.jackson.jq.v2.core.JsonQuery;
 import net.thisptr.jackson.jq.v2.core.version.Versions;
-import net.thisptr.jackson.jq.v2.json.JsonProvider;
 import net.thisptr.jackson.jq.v2.json.impl.jackson2.Jackson2JsonProvider;
-import net.thisptr.jackson.jq.v2.spi.BindContext;
-import net.thisptr.jackson.jq.v2.spi.Expression;
+import net.thisptr.jackson.jq.v2.spi.Cardinality;
+import net.thisptr.jackson.jq.v2.spi.ExpressionProperties;
 import net.thisptr.jackson.jq.v2.spi.Function;
 import net.thisptr.jackson.jq.v2.spi.FunctionSignature;
-import net.thisptr.jackson.jq.v2.spi.Output;
-import net.thisptr.jackson.jq.v2.spi.RuntimeContext;
 import net.thisptr.jackson.jq.v2.spi.exception.JsonQueryException;
-import net.thisptr.jackson.jq.v2.spi.path.Path;
-import net.thisptr.jackson.jq.v2.spi.version.Version;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 public class TimeModuleTest {
-	private static final BindContext<JsonNode> BIND_CONTEXT = new BindContext<>() {
-		@Override
-		public JsonProvider<JsonNode> getJsonProvider() {
-			return Jackson2JsonProvider.getInstance();
-		}
-
-		@Override
-		public Version getJqVersion() {
-			return Versions.JQ_1_6;
-		}
-	};
-
-	private static <T, Context extends RuntimeContext> Expression<Context, T> pureExpression() {
-		return new Expression<>() {
-			@Override
-			public boolean dependsOnInput() {
-				return false;
-			}
-
-			@Override
-			public boolean dependsOnExternalState() {
-				return false;
-			}
-
-			@Override
-			public void apply(Context context, T in, Path<T> ipath, Output<T> output) {
-			}
-		};
-	}
+	private static final ExpressionProperties PURE_ARGUMENT = new ExpressionProperties(Cardinality.ONE, false, false);
 
 	@Test
 	public void formatsAndParsesTime() throws JsonQueryException {
@@ -103,25 +69,25 @@ public class TimeModuleTest {
 	public void functionContract() {
 		ModuleImpl module = new ModuleImpl();
 		Function strftime1 = Objects.requireNonNull(module.getFunctions().get(FunctionSignature.of("strftime", 1)));
-		Expression<RuntimeContext, JsonNode> strftime1Expr = strftime1.bind(BIND_CONTEXT, Collections.singletonList(pureExpression()));
-		assertThat(strftime1Expr.dependsOnInput()).isTrue();
-		assertThat(strftime1Expr.dependsOnExternalState()).isTrue();
+		ExpressionProperties strftime1Properties = strftime1.analyze(Versions.JQ_1_6, List.of(PURE_ARGUMENT));
+		assertThat(strftime1Properties.dependsOnInput()).isTrue();
+		assertThat(strftime1Properties.dependsOnExternalState()).isTrue();
 		Function strftime2 = Objects.requireNonNull(module.getFunctions().get(FunctionSignature.of("strftime", 2)));
-		Expression<RuntimeContext, JsonNode> strftime2Expr = strftime2.bind(BIND_CONTEXT, List.of(pureExpression(), pureExpression()));
-		assertThat(strftime2Expr.dependsOnInput()).isTrue();
-		assertThat(strftime2Expr.dependsOnExternalState()).isFalse();
+		ExpressionProperties strftime2Properties = strftime2.analyze(Versions.JQ_1_6, List.of(PURE_ARGUMENT, PURE_ARGUMENT));
+		assertThat(strftime2Properties.dependsOnInput()).isTrue();
+		assertThat(strftime2Properties.dependsOnExternalState()).isFalse();
 		Function strptime1 = Objects.requireNonNull(module.getFunctions().get(FunctionSignature.of("strptime", 1)));
-		Expression<RuntimeContext, JsonNode> strptime1Expr = strptime1.bind(BIND_CONTEXT, Collections.singletonList(pureExpression()));
-		assertThat(strptime1Expr.dependsOnInput()).isTrue();
-		assertThat(strptime1Expr.dependsOnExternalState()).isTrue();
+		ExpressionProperties strptime1Properties = strptime1.analyze(Versions.JQ_1_6, List.of(PURE_ARGUMENT));
+		assertThat(strptime1Properties.dependsOnInput()).isTrue();
+		assertThat(strptime1Properties.dependsOnExternalState()).isTrue();
 		Function strptime2 = Objects.requireNonNull(module.getFunctions().get(FunctionSignature.of("strptime", 2)));
-		Expression<RuntimeContext, JsonNode> strptime2Expr = strptime2.bind(BIND_CONTEXT, List.of(pureExpression(), pureExpression()));
-		assertThat(strptime2Expr.dependsOnInput()).isTrue();
-		assertThat(strptime2Expr.dependsOnExternalState()).isFalse();
+		ExpressionProperties strptime2Properties = strptime2.analyze(Versions.JQ_1_6, List.of(PURE_ARGUMENT, PURE_ARGUMENT));
+		assertThat(strptime2Properties.dependsOnInput()).isTrue();
+		assertThat(strptime2Properties.dependsOnExternalState()).isFalse();
 		Function timestamp = Objects.requireNonNull(module.getFunctions().get(FunctionSignature.of("timestamp", 0)));
-		Expression<RuntimeContext, JsonNode> timestampExpr = timestamp.bind(BIND_CONTEXT, Collections.emptyList());
-		assertThat(timestampExpr.dependsOnInput()).isFalse();
-		assertThat(timestampExpr.dependsOnExternalState()).isTrue();
+		ExpressionProperties timestampProperties = timestamp.analyze(Versions.JQ_1_6, List.of());
+		assertThat(timestampProperties.dependsOnInput()).isFalse();
+		assertThat(timestampProperties.dependsOnExternalState()).isTrue();
 	}
 
 	private List<JsonNode> run(String expression) throws JsonQueryException {
